--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
 .task {
 	word-wrap: break-all;
 }
-
+.container {
+	max-width: 1000px;
+}
+.panel-default .panel-title{
+	font-size: 0.9em;
+}
 /*table {
 	border-collapse:collapse; 
 	table-layout:fixed; 
