Added UI Design with links to best pratice resources. Added link for brainstorming as well.

--- a/main.css
+++ b/main.css
@@ -14,6 +14,12 @@
 	color:white;
 	background-color: #27ae60;
 }
+.panel-success .panel-heading span>a{
+	color:white;
+}
+.panel-success .panel-heading>span>a:hover,a:focus{
+	color:#bdc3c7;
+}
 /*table {
 	border-collapse:collapse; 
 	table-layout:fixed; 
