--- a/main.css
+++ b/main.css
@@ -14,11 +14,14 @@
 	color:white;
 	background-color: #27ae60;
 }
-.panel-success .panel-heading span>a{
+.panel-success .panel-heading>span>a{
 	color:white;
 }
 .panel-success .panel-heading>span>a:hover,a:focus{
 	color:#bdc3c7;
+}
+.fa-star{
+	color:#f1c40f;
 }
 /*table {
 	border-collapse:collapse; 
