--- a/spiderweb/radar.css
+++ b/spiderweb/radar.css
@@ -31,3 +31,33 @@ body {
 	font-weight: bold;
 	width:100%;
 }
+
+.claimItems {
+	height: 550px;
+	border-style: solid;
+	border-width: 0px 0px 1px 0px;
+	overflow-y: scroll;
+}
+
+.claimItems::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.claimItems::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+
+.claimItems::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+.claimItems::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.claimItems::-webkit-scrollbar-track { 
+    background-color: #fff; 
+    border-radius: 8px; 
+} 
