--- a/spiderweb/radar.css
+++ b/spiderweb/radar.css
@@ -25,6 +25,7 @@ body {
 	width:700px;
 	height:600px;
 }
+
 .highchart-container {
 	width:100%;
 	height:100%;
@@ -36,8 +37,12 @@ body {
 	width:100%;
 }
 
+.content {
+	padding: 5px;
+}
+
 .claimItems {
-	height: 550px;
+	height: 370px;
 	border-style: solid;
 	border-width: 0px 0px 1px 0px;
 	overflow-y: scroll;
