--- a/spiderweb/radar.css
+++ b/spiderweb/radar.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	font-size: 14px;
 	font-family: "Helvetica Neue", Helvetica;
+	overflow-y: scroll;
 }
 
 #row-research {
@@ -17,6 +18,11 @@ body {
 	font-size: 20px;
 }
 
+#total {
+/*	font-weight: bold;
+*/	font-size: 20px;
+}
+
 #chart {
 	display: none;
 	width:100%;
@@ -27,8 +33,12 @@ body {
 .graphArea {
 	width:700px;
 	height:600px;
+	position: fixed;
 }
 
+.user-input {
+	margin-left: 700px;
+}
 .highchart-container {
 	/*width:100%;
 	height:600px;
@@ -42,15 +52,15 @@ body {
 }
 
 .content {
-	padding: 5px;
+	padding: 20px;
 }
 
 .claimItems {
-	height: 370px;
-	border-style: solid;
-	border-width: 0px 0px 1px 0px;
-	overflow-y: scroll;
-}
+/*	height: 370px;
+*/	/*border-style: solid;
+	border-width: 0px 0px 1px 0px;*/
+/*	overflow-y: scroll;
+*/}
 
 .claimItems::-webkit-scrollbar {
     -webkit-appearance: none;
