--- a/dtr-bars/main.css
+++ b/dtr-bars/main.css
@@ -8,16 +8,17 @@
 .ul-delieverables{
 	padding-left: inherit;
 }
-.circle-1{
+.circle-Design{
 	color:#e67e22;
 }
-.circle-2{
+.circle-Technology{
 	color: #3498db;
 }
-.circle-3{	
+.circle-Research{	
 	color: #9b59b6;
 }
-.circle-4{
+
+/*.circle-4{
 	color: #f1c40f;
 }
 .circle-5{
@@ -32,3 +33,4 @@
 .circle-8{
 	color: #2c3e50;
 }
+*/
