--- a/playground/css/style.css
+++ b/playground/css/style.css
@@ -15,14 +15,15 @@ body {
 	text-align: center;
 	font-family: Asap, Avenir, Arial, sans-serif;
 	width: 196px;
-	height: 100px;
-	line-height: 100px;
+	height: 70px;
+	line-height: 70px;
 	color: black;
 	position: absolute;
 	top:0;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+	border: solid 4px black;
 }
 
 .controls {
@@ -30,7 +31,8 @@ body {
 	border: 1px solid #555;
 	color: #bbb;
 	font-size: 18px;
-  margin: 20px 0;
+  	margin: 20px 0;
+  	display: none;
 }
 .controls ul {
 	list-style: none;
@@ -50,4 +52,12 @@ body {
   border-right:1px solid #555; 
   border-bottom:none; 
   padding-right:10px;
+}
+
+
+/*Extra stuff*/
+
+#row-research{
+	width:980px;
+	margin-bottom: 20px;
 }
