--- a/fidelity/main.css
+++ b/fidelity/main.css
@@ -8,40 +8,17 @@
 .ul-delieverables{
 	padding-left: inherit;
 }
-.circle-1{
-	color:#e67e22;
-}
-.circle-2{
-	color: #3498db;
-}
-.circle-3{	
-	color: #9b59b6;
-}
-.circle-4{
-	color: #f1c40f;
-}
-.circle-5{
-	color: #27ae60;
-}
-.circle-6{
-	color: #e74c3c;
-}
-.circle-7{
-	color: #95a5a6;
-}
-.circle-8{
-	color: #2c3e50;
-}
 
-.lo-fi {
+
+.lo-fi, .circle-lo-fi {
 	color: orange;
 }
 
-.medium-fi {
+.medium-fi, .circle-medium-fi {
 	color: blue;
 }
 
-.hi-fi {
+.hi-fi, .circle-hi-fi {
 	color: red;
 }
 
